Платформенно-независимый путь к файлу seed.txt