@@ -4,20 +4,18 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.math.BigInteger;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.Arrays;
 import java.util.Random;
 
 public class RunSortingFiltered {
-    public static void main(String[] args) {
+    public static void main(String[] args) throws IOException{
         final long seed;
         try (BufferedReader reader = Files.newBufferedReader(
-                Paths.get("/home/gralkekd/IdeaProjects/245-5-brigada/src/main/java/study/seed.txt")
+                Path.of("src", "main", "java", "study", "seed.txt")
         )) {
             BigInteger bigInteger = new BigInteger(reader.readLine(), 16);
             seed = bigInteger.longValue();
-        } catch (IOException e) {
-            throw new RuntimeException(e);
         }
         Random random = new Random(seed);
         Integer[] array = new Integer[20];
